MODPATRON-91 Add plugin to fix jenkins